[project]
name = "chatterbox-streaming"
version = "0.1.3+torch28"
description = "Chatterbox Streaming: Open Source TTS and Voice Conversion"
readme = "README.md"
requires-python = "==3.10.8"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"},
    {name = "davidbrowne17", email = "davidbrowne17@gmail.com"},
    {name = "dbc201", email = "denizbcakiroglu@gmail.com"}
]
dependencies = [
    "numpy~=1.26.0",
    "resampy==0.4.3",
    "librosa >=0.10,<0.12",
    "s3tokenizer",
    "torch>=2.6,<2.9",
    "torchaudio>=2.6,<2.9",
    "transformers >=4.46,<4.57",
    "diffusers==0.29.0",
    "omegaconf==2.3.0",
    "conformer==0.3.2",
    "matplotlib",
    "whisper-openai",
    "jiwer",
    "sounddevice==0.5.2"
]

[project.urls]
Homepage = "https://github.com/davidbrowne17/chatterbox-streaming"
Repository = "https://github.com/davidbrowne17/chatterbox-streaming"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
